tests/NormalTests/paczka1/small_fuzzy/94303937.err
Error in line 1: 4CWZtc1q A625 12,8
Error in line 3: d1CTX S390 11,6
Error in line 4: 4CWZtc1q S390 45,5
Error in line 8: 4CWZtc1q A625 17,1
Error in line 14: 8W7 A625 29,3
